# bug_opencl_boost_compute

./: CMakeLists.txt  build.sh  myexe.cpp  mylib.cpp
cmake/: FindBoostCompute.cmake
include/: mylib.h
